@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction


    class ViewStationDetailsUI {
    }


    class ViewStationDetailsController {
        +ViewStationDetailsController()
        +getAvailableScenarioNames()
        +getAvailableStationNames()
        +getBuildingDetailsString(stationIndex)
        +getCargoInfo(stationIndex)
    }


    class Repositories {
        -Repositories()
        +getInstance()
        +getScenarioRepository()
        +getStationRepository()
    }

    class ScenarioRepository {
        +getScenarios()
    }

    class StationRepository {
        +getStations()
    }

    class Scenario {
        - map: Map
            - year: int
            - locomotiveTypes: List<LocomotiveType>
            - importation: List<ResourceType>
            - exportation: List<ResourceType>
            - changer: int
    }

    class Station {
        -name: String
            -center: StationCenter
            -position: Position
            -stationType: StationType
            -demandedCargo: List<Cargo>
            -suppliedCargo: List<Cargo>
            -buildings: List <Building>
        +getBuildingDetailsString()
        +getCargoInfo()
    }


    class ScenarioListMapper {
        +toDTO(List<Scenario>)
    }

    class StationListMapper {
        +toDTO(List<Station>)
    }


    class ScenarioDTO {
        - map: Map
            - year: int
            - locomotiveTypes: List<LocomotiveType>
            - importation: List<ResourceType>
            - exportation: List<ResourceType>
            - changer: int
    }

    class StationDTO {
        -name: String
            -center: StationCenter
            -position: Position
            -stationType: StationType
            -demandedCargo: List<Cargo>
            -suppliedCargo: List<Cargo>
            -buildings: List <Building>
    }

    ViewStationDetailsUI ..> ViewStationDetailsController

    ViewStationDetailsController ..> Repositories
    ViewStationDetailsController ..> ScenarioRepository
    ViewStationDetailsController ..> StationRepository
    ViewStationDetailsController ..> ScenarioListMapper
    ViewStationDetailsController ..> StationListMapper

    Repositories -> "1" Repositories : instance
    Repositories --> ScenarioRepository: scenarioRepository
    Repositories --> StationRepository: stationRepository

    StationRepository --> "1..*" Station: station
    ScenarioRepository --> "1..*" Scenario: scenario

    ScenarioListMapper --> "1" ScenarioDTO: scenarioDTO
    ScenarioListMapper --> "1..*" Scenario: scenario
    StationListMapper --> "1" StationDTO: stationDTO
    StationListMapper --> "1..*" Station: station

@enduml